# AIO-Conquer

./: .dockerignore  .env.example  .gitignore  AGENTS.md  DEVELOPMENT.md  Dockerfile.api  README.md  docker-compose.yml  main.py  multivariate_6a548236-e346-4b1d-b498-3a07265849eb.json  plan.md  plan_multivariate.md  plan_multivariate_storage.md  pyproject.toml  requirements.txt
.chainlit/: config.toml
.deepeval/: .deepeval_telemetry.txt
app/: main.py
app/api/: schemas.py
app/api/routes/: ask.py  (+4 more)
app/core/: config.py  eda_corr.py  eda_pipeline.py  pipeline.py  tracing.py
app/data/: EDA_Universal.ipynb  EDA_Workflow_Template.md  EmployeeAttrition_QA_Benchmark.csv  LLM_Summary_Template.md  MobileGameChurn_QA_Benchmark.csv  SuperStore_QA_Benchmark.csv
app/evaluation/: answer_cot_score.py  bertscore.py  ragas_score.py  runner.py  utils.py
app/graph/: nodes.py  schema.py  visualize.py
app/memory/: context_store.py  domain_store.py  eda_store.py  redis_client.py  vector_store.py
app/model/: llm_client.py  openai_client.py
app/retrieval/: chunker.py  embedder.py  retriever.py
app/tools/: __init__.py  data_loader.py  dataset_profile.py  domain_usecase.py  schema.py  statistics.py
app/ui/: app.py  config.py
app/validation/: multivariate_parser.py  parser.py
artifacts/: multivariate-domain-store.md  mvp-agentic-data-analysis-checklist.md
public/: summary-toggle.js
scripts/: debug_parser.py  locust_ask_logger.py  locustfile.py
tests/: 20260626_115456.json  20260626_121019.json  20260626_121454.json  superstore_ask_flow.py  test_answer_cot_score.py
(+19 files in other folders)
