[project]
name = "aio-conquer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-openai>=1.3.3",
    "langsmith[claude-agent-sdk]>=0.8.18",
    "pydantic-core>=2.46.4",
]
[tool.pyright]
typeCheckingMode = "off"
